--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ spacy==3.7.4
 requests==2.31.0
 bs4==0.0.2
 flask_restx==1.3.0
+flask_cors==4.0.1
 flask_sqlalchemy==3.1.1
 gunicorn==22.0.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
